feat: add new database connection instance + fleshing out db logic to add new exercise
