# server/api/controllers/exercises/router.ts
@@ -1,0 +1,4 @@
+import express from 'express';
+import ExercisesController from './controller';
+
+export default express.Router().post('/', ExercisesController.addNewExercise);
