# server/api/controllers/programs/controller.ts
@@ -7,6 +7,10 @@ export class ProgramsController {
       res.status(200).json(programs);
     });
   }
+
+  addNewProgram(req: Request, res: Response): void {
+    const { name, exercises } = req.body;
+  }
 }
 
 export default new ProgramsController();
